# jaxpurify

./: LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: features.py  gaussian_process.py  gp_inference.py  neural_network.py  soup.py
src/jaxpurify/: __init__.py  models.py  purify.py  transformation.py
tests/: test_purify.py
