[project]
name = "jaxpurify"
dynamic = ["version"]
authors = [
    {name="Benjamin Dodge", email="bendodge@stanford.edu"}
]
description = "A simple JAX interpreter for models."
readme = "README.md"
license = "MIT"
requires-python = ">= 3.11"
dependencies = [
    "jax>=0.7.2",
]

[project.urls]
Source = "https://github.com/dodgebc/jaxpurify"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100

[tool.uv.sources]
jaxpurify = { workspace = true }

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jaxpurify",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "tqdm>=4.67.3",
]
